# PRANIDHI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
deploy/docker/: Dockerfile
docs/: index.html
policies/: default.yaml
policies/examples/: healthcare.yaml
src/pranidhi/: __init__.py  models.py  pipeline.py
src/pranidhi/crse/: risk_scorer.py
src/pranidhi/idl/: decomposer.py
src/pranidhi/nudging_engine/: engine.py
src/pranidhi/nudging_engine/strategies/: abstraction.py  decomposition.py  redirection.py  substitutive.py
src/pranidhi/peol/: enforcer.py
src/pranidhi/taall/: telemetry.py
tests/: test_pipeline.py
